crates/parser/tests/snapshots/inline/while_stmt.snap
---
source: crates/parser/tests/inline.rs
snapshot_kind: text
---
# while_stmt

## Input

```
while true do end
```

## CST

```
SOURCE_FILE@0..17
  WHILE_STMT@0..17
    WHILE_KW@0..5 "while"
    WHITESPACE@5..6 " "
    LITERAL@6..10
      TRUE@6..10 "true"
    WHITESPACE@10..11 " "
    DO_EXPR@11..17
      DO_KW@11..13 "do"
      WHITESPACE@13..14 " "
      END_KW@14..17 "end"
```

## AST

```
SourceFile {
    shebang: none,
    stmt: [
        WhileStmt {
            while_token: WHILE_KW@0..5 "while",
            condition: Literal {
                token: TRUE@6..10 "true",
            },
            loop_body: DoExpr {
                do_token: DO_KW@11..13 "do",
                statements: [],
                end_token: END_KW@14..17 "end",
            },
        },
    ],
}
```

vim:ft=markdown
